force-app/main/default/objects/sf_Ref_Application_Detail__c/sf_Ref_Application_Detail__c.object-meta.xml
<CustomObject>
    <description>Use this object to represent a configurable question body control record for application process.</description>
    <label>Reference Application Detail</label>
    <nameField>
        <displayFormat>RAD-{00000000}</displayFormat>
        <label>Reference Application Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reference Application Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>