force-app/main/default/objects/sf_Ref_Application_Detail__c/fields/Flow_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Flow_API_Name__c</fullName>
    <label>Flow API Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>