force-app/main/default/objects/sf_Ref_Application_Detail__c/fields/Maximum__c.field-meta.xml
<CustomField>
    <fullName>Maximum__c</fullName>
    <label>Maximum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>