force-app/main/default/objects/sf_Ref_Application_Detail__c/fields/Medium_Device_Size__c.field-meta.xml
<CustomField>
    <fullName>Medium_Device_Size__c</fullName>
    <defaultValue>IF($RecordType.DeveloperName == &apos;Display_Text&apos;, &apos;12&apos;,
 IF($RecordType.DeveloperName == &apos;Display_Rich_Text&apos;, &apos;12&apos;,
 IF($RecordType.DeveloperName == &apos;Input_Text_Area_Long&apos;, &apos;12&apos;,
 IF($RecordType.DeveloperName == &apos;Custom_Component&apos;, &apos;12&apos;,
 IF($RecordType.DeveloperName == &apos;Input_Record_List&apos;, &apos;12&apos;,
 &apos;6&apos;
)))))</defaultValue>
    <label>Medium Device Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>11</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>