force-app/main/default/objects/sf_Ref_Application_Detail__c/fields/Minimum__c.field-meta.xml
<CustomField>
    <fullName>Minimum__c</fullName>
    <label>Minimum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>