force-app/main/default/objects/sf_Ref_Application_Detail__c/fields/Parent_Dependent_Answer__c.field-meta.xml
<CustomField>
    <fullName>Parent_Dependent_Answer__c</fullName>
    <label>Parent Dependent Answer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>