force-app/main/default/objects/sf_Ref_Application_Detail__c/fields/Radio_Group_Values__c.field-meta.xml
<CustomField>
    <fullName>Radio_Group_Values__c</fullName>
    <inlineHelpText>Semicolon separated list of values (EX. &apos;Yes; No; Maybe&apos;)</inlineHelpText>
    <label>Radio Group Values</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>