force-app/main/default/objects/sf_Ref_Application_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>sf_Ref_Application_Section__c</columns>
    <columns>NAME</columns>
    <columns>Display_Text__c</columns>
    <columns>Field_Label__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Required__c</columns>
    <columns>Sort_Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>